--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,46 @@
+#wrapper {
+  overflow-x: hidden;
+}
 
+#sidebar-wrapper {
+  margin-left: -15rem;
+  min-height: 100vh;
+  transition: margin 0.25s ease-in-out;
+  -moz-transition: margin 0.25s ease-in-out;
+  -o-transition: margin 0.25s ease-in-out;
+  -webkit-transition: margin 0.25s ease-in-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+  font-size: 1.2rem;
+  padding: 0.875rem 1.25rem;
+}
+
+#sidebar-wrapper .list-group {
+  width: 15rem;
+}
+
+#page-content-wrapper {
+  min-width: 100vw;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  margin-left: 0;
+}
+
+@media (min-width: 768px) {
+  #sidebar-wrapper {
+    margin-left: 0;
+  }
+
+  #page-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+
+  #wrapper.toggled #sidebar-wrapper {
+    margin-left: -15rem;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
