--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <!-- Page Content -->
   <div id="page-content-wrapper">
     <app-menu></app-menu>
-    <app-inicio></app-inicio>
+      <router-outlet></router-outlet>
   </div>
   <!-- /#page-content-wrapper -->
 
