tabla de prueba

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,1 +1,72 @@
-<p>productos works!</p>
+<div class="container-fluid table-responsive">
+    <h1 class="mt-4">Simple Sidebar</h1>
+    <table class="table table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">id</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Costo</th>
+                <th scope="col">Descripcion</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row">1</td>
+                <td>Producto 1</td>
+                <td>$ 10.00</td>
+                <td>Producto de prueba1</td>
+                <td>5</td>
+                <td>
+                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td scope="row">2</td>
+                <td>Producto 2</td>
+                <td>$ 15.00</td>
+                <td>Producto de prueba 2</td>
+                <td>12</td>
+                <td>
+                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td scope="row">3</td>
+                <td>Producto 3</td>
+                <td>$ 10.50</td>
+                <td>Producto de prueba 3</td>
+                <td>23</td>
+                <td>
+                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td scope="row">4</td>
+                <td>Producto 4</td>
+                <td>$ 40.00</td>
+                <td>Producto de prueba 4</td>
+                <td>4</td>
+                <td>
+                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                </td>
+            </tr>
+            <tr>
+                <td scope="row">5</td>
+                <td>Producto 5</td>
+                <td>$ 30.50</td>
+                <td>Producto de prueba 5</td>
+                <td>10</td>
+                <td>
+                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
