--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid table-responsive">
-    <h1 class="mt-4">Simple Sidebar</h1>
+<h1 class="mt-4">Productos</h1>
+<div class="table-responsive">
     <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
