--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
   <!-- Page Content -->
   <div id="page-content-wrapper">
     <app-menu></app-menu>
+    <div class="container-fluid">
       <router-outlet></router-outlet>
+    </div>
   </div>
   <!-- /#page-content-wrapper -->
 
