formulario para agregar productos ok

--- a/src/app/pages/add-productos/add-productos.component.html
+++ b/src/app/pages/add-productos/add-productos.component.html
@@ -1,1 +1,40 @@
-<p>add-productos works!</p>
+<h1 class="mt-4">Agregar Productos</h1>
+<form action="">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="id">ID</label>
+                <input type="text" class="form-control" id="id" placeholder="ID">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="nombre">Nombre</label>
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="precio">Precio</label>
+                <input type="number" class="form-control" id="costo" placeholder="Costo">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="cantidad">Cantidad</label>
+                <input type="number" class="form-control" id="cantidad" placeholder="Cantidad">
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="descripcion">Descripcion</label>
+                <textarea name="descripcion" id="descripcion" class="form-control" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Agregar</button>
+            </div>
+        </div>
+    </div>
+</form>
