Plantilla de edit agregada

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -30,7 +30,7 @@
                 <td>Producto de prueba 2</td>
                 <td>12</td>
                 <td>
-                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
+                    <button data-toggle="modal" data-target="#exampleModal" type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></button>
                     <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
                 </td>
             </tr>
@@ -70,3 +70,4 @@
         </tbody>
     </table>
 </div>
+<app-edit></app-edit>
