productos con servicios agregados

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -12,58 +12,14 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td scope="row">1</td>
-                <td>Producto 1</td>
-                <td>$ 10.00</td>
-                <td>Producto de prueba1</td>
-                <td>5</td>
-                <td>
-                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
-                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
-                </td>
-            </tr>
-            <tr>
-                <td scope="row">2</td>
-                <td>Producto 2</td>
-                <td>$ 15.00</td>
-                <td>Producto de prueba 2</td>
-                <td>12</td>
+            <tr *ngFor="let lista of listProductos; index as i">
+                <td>{{ i + 1 }}</td>
+                <td>{{ lista.nombre }}</td>
+                <td>{{ lista.costo }}</td>
+                <td>{{ lista.descripcion }}</td>
+                <td>{{ lista.cantidad }}</td>
                 <td>
                     <button data-toggle="modal" data-target="#exampleModal" type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></button>
-                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
-                </td>
-            </tr>
-            <tr>
-                <td scope="row">3</td>
-                <td>Producto 3</td>
-                <td>$ 10.50</td>
-                <td>Producto de prueba 3</td>
-                <td>23</td>
-                <td>
-                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
-                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
-                </td>
-            </tr>
-            <tr>
-                <td scope="row">4</td>
-                <td>Producto 4</td>
-                <td>$ 40.00</td>
-                <td>Producto de prueba 4</td>
-                <td>4</td>
-                <td>
-                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
-                    <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
-                </td>
-            </tr>
-            <tr>
-                <td scope="row">5</td>
-                <td>Producto 5</td>
-                <td>$ 30.50</td>
-                <td>Producto de prueba 5</td>
-                <td>10</td>
-                <td>
-                    <a type="button" class="actions btn btn-warning"><i class="fas fa-edit"></i></a>
                     <a type="button" class="actions btn btn-danger"><i class="fas fa-trash-alt"></i></a>
                 </td>
             </tr>
