conexion con mysql realizada

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -13,7 +13,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let lista of listProductos">
-                <td>{{ lista.identificador }}</td>
+                <td>{{ lista.id }}</td>
                 <td>{{ lista.nombre }}</td>
                 <td>{{ lista.costo }}</td>
                 <td>{{ lista.descripcion }}</td>
