Agregar datos desde vista a mysql ok

--- a/src/app/pages/add-productos/add-productos.component.html
+++ b/src/app/pages/add-productos/add-productos.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="id">Identificador</label>
-                <input [(ngModel)]="producto.identificador" type="text" name="identificador" class="form-control" id="id" placeholder="identificador">
+                <!-- <input [(ngModel)]="producto.id" type="text" name="identificador" class="form-control" id="id" placeholder="identificador"> -->
             </div>
         </div>
         <div class="col-md-6">
